Fix z-index issues

--- a/resources/assets/css/components/panels.css
+++ b/resources/assets/css/components/panels.css
@@ -197,7 +197,6 @@
 	top: 0;
 	right: 0;
 
-	z-index: 900;
 	transition: all 0.1s linear;
 }
 
